--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
   "dependencies": {
     "@actions/core": "^1.1.1",
     "@actions/exec": "^1.0.1",
-    "@actions/tool-cache": "^1.1.2"
+    "@actions/tool-cache": "^1.1.2",
+    "git": "^0.1.5",
+    "github": "^14.0.0"
   },
   "devDependencies": {
-    "@zeit/ncc": "0.20.5"
+    "@zeit/ncc": "0.20.5",
+    "git": "^0.1.5",
+    "github": "^14.0.0"
   }
 }
